# radar-dev

./: .gitignore  README.md  generate_dataset.py  generate_dataset_radar_only.py  generate_movie.py  generate_movie_radar_only.py  initialize.sh  pyproject.toml  run_realtime_model.py  train_model.py
CPSL_Radar/: Analyzer.py  Viewer.py  trainer.py
CPSL_Radar/data_processors/: Lidar_Data_Processor.py  Radar_Data_Processor.py
CPSL_Radar/datasets/: Dataset_Generator.py  Segmentation_Dataset.py
CPSL_Radar/models/: unet.py
Notebooks/: access_dataset_CPSL_ground_xiao.ipynb  access_dataset_DeepSense6G.ipynb  compare_model_results.ipynb  crop_jpg_for_cyclegan.ipynb  fix_dataset_file_names.ipynb  generate_dataset_CPSL_ground.ipynb  generate_dataset_CPSL_ground_0906_xiao.ipynb  generate_dataset_CPSL_ground_0911_xiao.ipynb  train_model.ipynb  view_results.ipynb  view_results_radar_only.ipynb
Xiao/: load_npy_save2_jpeg.ipynb  load_npy_save2_jpeg_0905.ipynb
Xiao/cyclegan/: cyclegan.py  datasets.py  models.py  utils.py
Xiao/deeplabv3/: 0925_try.ipynb
datasets/: Lidar_Data_Processor.py  Radar_Data_Processor.py  generate_dataset_CPSL_ground.ipynb
datasets/Deepsense_6G/: Lidar_Data_Processor.py  Radar_Data_Processor.py  access_dataset.ipynb  generate_dataset.ipynb  load_and_display_data.ipynb
hooks/: pre-commit
models/CPSL_Radar_UNET_Pytorch/: pyproject.toml  testing.ipynb  train_model.ipynb  train_model.py  view_results.ipynb
models/CPSL_Radar_UNET_Pytorch/CPSL_Radar_UNET_Pytorch/: Config.py  Loss_Fns.py  Model.py  Model_Trainer.py  Viewer.py  testing.ipynb
(+12 files in other folders)
