[tool.poetry]
name = "cpsl-radar-unet-pytorch"
version = "0.1.0"
description = "unet model designed to integrate with other CPSL Radar code"
authors = ["David Hunt <david.hunt@duke.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cpsl_radar_unet_pytorch"}]

[tool.poetry.dependencies]
python = "=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
